Text correctly aligned over video and image now on both mobile and desktop breakpoints

--- a/resources/styles/home.scss
+++ b/resources/styles/home.scss
@@ -46,71 +46,150 @@ body {
 // Header stylings
 header {
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    background-color: #C4C4C4;
+    justify-content: center;
+    width: 80%;
+    margin-left: 10%;
 
-    h1 {
-        font-family: $abel;
+    @include tablet() {
+        justify-content: space-between;
     }
 
-    .header-underline {
-        left: 1.06%;
-        right: 0.91%;
-        top: 52.08%;
-        bottom: 47.92%;
-        border: 1px solid #C4C4C4;
-        margin-top: 0;
+    @include desktop() {
+        justify-content: space-between;
+    }
+
+    h1 {
+        margin-left: 15px;
+        font-family: $abel;
+        font-size: 18px;
+
+        @include desktop() {
+            font-size: 36px;
+        }
     }
 }
 
 .home-video {
     font-family: $aleo;
     color: $black;
+    margin-bottom: 0;
+    padding: 0;
 
     .video-text-1 {
+        position: absolute;
+        top: 15%;
+        left: 15%;
+        text-align: center;
+        z-index: 1;
+
+        @include desktop() {
+            font-size: 56px;
+            top: 25%;
+            left: 25%;
+        }
+    }
+
+    .video-text-2 {
         position: absolute;
         top: 25%;
         left: 15%;
         text-align: center;
         z-index: 1;
-    }
 
-    .video-text-2 {
-        position: absolute;
-        top: 30%;
-        left: 15%;
-        text-align: center;
-        z-index: 1;
+        @include desktop() {
+            font-size: 56px;
+            left: 25%;
+            top: 45%;
+        }
     }
 
     video {
         width: 100%;
         height: auto;
         display: inline-block;
-        background-color: $black;
         opacity: 0.5;
     }
 }
 
 .home-banner {
 
+    margin-top: -5px;
 
     img {
+        display: inline-block;
         width: 100%;
         height: auto;
         mix-blend-mode: darken;
         opacity: 0.4;
         width: 100%;
-        height: 20%;
+        position: relative;
+    }
 
-        @include mobile() {}
+    font-family: $aleo;
+    color: $black;
+
+    .home-banner-1 {
+        position: absolute;
+        top: 50%;
+        left: 5%;
+
+        @include desktop() {
+            left: 5%;
+            top: 160%;
+            font-size: 28px;
+        }
+    }
+
+    .home-banner-2 {
+        position: absolute;
+        top: 55%;
+        left: 5%;
+
+        @include desktop() {
+            left: 5%;
+            top: 170%;
+            font-size: 28px;
+        }
+    }
+
+    .home-banner-3 {
+        position: absolute;
+        top: 60%;
+        left: 5%;
+
+
+        @include desktop() {
+            left: 5%;
+            top: 180%;
+            font-size: 28px;
+        }
+    }
+
+    a {
+        position: absolute;
+        text-decoration: none;
+        top: 70%;
+        left: 70%;
+        border: 2px solid $burn;
+        border-radius: 5px;
+        background-color: $burn;
+        padding: 5px 10px;
+        color: $black;
+        font-family: $aleo;
+        color: $black;
+        z-index: 1;
+
+        @include desktop() {
+            top: 170%;
+            left: 70%;
+            font-size: 28px;
+        }
     }
 }
 
 main {
+    margin-top: -5px;
     font-family: $aleo;
     width: 100%;
     background-color: $black;
@@ -119,6 +198,10 @@ main {
     padding-bottom: 5%;
 
     h1 {
+        text-align: center;
+    }
+
+    h2 {
         text-align: center;
     }
 
